<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    android:id="@+id/card_item_note">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="8dp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/view_pinned"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:visibility="invisible"
                android:background="@drawable/background_view_pinned" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/this_is_body_of_note"
            android:maxLines="10"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/tmp_time"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:padding="8dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>