<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/he_background"
    tools:context=".Activities.NoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tmp_time"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_below="@+id/toolbar_notes"/>

    <View
        android:id="@+id/view_tmp_break01"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@id/txt_date"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/title"
        app:hintTextColor="@color/green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/view_tmp_break01">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_tmp_break02"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_below="@id/txt_title_layout"/>

    <ScrollView
        android:id="@+id/scroll_view_tmp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_tmp_break02"
        android:layout_above="@id/btn_save">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/content"
                app:hintTextColor="@color/green"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:padding="18dp"
                    android:textSize="18sp"
                    android:textStyle="normal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_tmp_change_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                android:orientation="horizontal"
                android:gravity="center_vertical|end">

                <TextView
                    android:id="@+id/tv_tmp_change_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_color_for_background_note"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_color"
                    android:background="@color/green"
                    android:contentDescription="@string/change_color_for_background_note"
                    android:layout_width="30dp"
                    android:layout_height="25dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="@drawable/background_button"
        android:text="@string/save"
        android:textColor="@color/green" />


</RelativeLayout>